<resources>
    <string name="app_name">Material Template</string>
    <string name="action_settings">Settings</string>

    <string name="defaultfont">Default Font</string>
    <string name="alexfont">AlexBrush Font</string>
    <string name="oswaldfont">Oswald-Stencbab Font</string>
    <string name="ralewayboldfont">Raleway Bold Font</string>
    <string name="ralewaylightfont">Raleway Light Font</string>
    <string name="ralewaymediumfont">Raleway Medium Font</string>
    <string name="ralewayregularfont">Raleway Regular Font</string>
    <string name="robotoboldfont">Roboto Bold Font</string>
    <string name="robotolightfont">Roboto Light Font</string>
    <string name="robotomediumfont">Roboto Medium Font</string>
    <string name="robotoregularfont">Roboto Regular Font</string>
    <string name="robotocondensedboldfont">Roboto Condensed Bold Font</string>
    <string name="robotocondensedlightfont">Roboto Condensed Light Font</string>
    <string name="robotocondensedregularfont">Roboto Condensed Regular Font</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="drawer_item_tabs">Tabs</string>
    <string name="drawer_item_tabs_desc">Material design tabs</string>
    <string name="drawer_item_fonts">Fonts</string>
    <string name="drawer_item_fonts_desc">Customize text fonts</string>
    <string name="drawer_item_recycler">RecyclerView</string>
    <string name="drawer_item_recycler_desc">Adding swipe and undo</string>

    <string name="favorite">Favorites</string>
    <string name="nearby">Nearby</string>
    <string name="friends">Friends</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

    <string name="copyright">Copyright &#169;2017 Achmad Hafizh</string>

    <string name="delete">DELETE</string>
</resources>
